...
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_name"
            app:layout_scrollFlags="scroll|enterAlways"
...
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <ru.andreysozonov.notes.ui.customviews.ColorPickerView
                android:id="@+id/colorPicker"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"/>
        </HorizontalScrollView>


    </com.google.android.material.appbar.AppBarLayout>
...
